# flatpak-builder-lint

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  CODEOWNERS  LICENSE  README.md  pyproject.toml  validator.py
.github/: labeler.yml
.github/workflows/: ci.yml  docker.yml  exceptions.yml  janitor_exceptions.yml  label.yml  release.yml  update-summary.yml
.history/flatpak_builder_lint/staticfiles/: exceptions_20250917123445.json
app/: tools.py
app/checks/: __init__.py
docker/: Dockerfile  Dockerfile.unprivileged  build.sh  cargo-sources-rpds-py.json  flatpak-builder-lint-deps.json  passwd  rewrite-manifest.py
flatpak_builder_lint/: __init__.py  appstream.py  builddir.py  cli.py  config.py  domainutils.py  exceptions_janitor.py  giturl.py  gitutils.py  manifest.py  ostree.py  policy.py  tools.py
flatpak_builder_lint/checks/: __init__.py  appid.py  catalogue.py  desktop.py  elfarch.py  eolruntime.py  finish-args.py  finish_args.py  flathub_json.py  flatmanager.py  jsonschema.py  licensecheck.py  metainfo.py  modules.py  reposize.py  screenshots.py  source.py  toplevel.py
flatpak_builder_lint/staticfiles/: exceptions.json  flathub-beta.summary  flathub-stable.summary  flatpak-manifest.schema.json  readme.md
tests/: Dockerfile  conftest.py  flatmanager.sh  python3-pytest.json  test_builddir.py  test_builddir_and_repo.py  test_cli.py  test_exceptions.py  test_giturl.py  test_httpserver.py  test_integration_smoke.py  test_manifest.py  test_metadata.py  test_repo_size.py  test_unit_appstream.py  test_unit_domainutils.py  test_unit_gitutils.py  test_unit_manifest.py  test_unit_policy.py  testlib.py
tests/builddir/appdata-quality/: com.github.flathub.appdata-quality.metainfo.xml  com.github.flathub.appdata-quality.xml  metadata
tests/builddir/appid/: metadata
tests/builddir/appstream-broken-icon/: metadata  org.flathub.appstream_broken_icon.metainfo.xml  org.flathub.appstream_broken_icon.xml
tests/builddir/appstream-broken-remote-icon/: metadata  org.flathub.appstream_broken_remote_icon.desktop  org.flathub.appstream_broken_remote_icon.metainfo.xml  org.flathub.appstream_broken_remote_icon.xml
tests/builddir/appstream-cid-mismatch-flatpak-id/: metadata  org.flathub.appstream-cid-mismatch-flatpak-id.metainfo.xml  org.flathub.appstream-cid-mismatch-flatpak-id.xml
tests/builddir/appstream-icon-key-no-type/: metadata  org.flathub.appstream_icon_key_no_type.metainfo.xml  org.flathub.appstream_icon_key_no_type.xml
tests/builddir/appstream-manifest-url-unreachable/: metadata  org.flathub.appstream_manifest_url_unreachable.xml
tests/builddir/appstream-missing-timestamp/: metadata  org.flathub.appstream_no_timestamp.appdata.xml  org.flathub.appstream_no_timestamp.xml
tests/builddir/appstream-no-icon-file/: metadata  org.flathub.appstream_no_icon_file.metainfo.xml  org.flathub.appstream_no_icon_file.xml
tests/builddir/appstream-prerelease/: metadata  org.flathub.appstream_prerelease.metainfo.xml  org.flathub.appstream_prerelease.xml
tests/builddir/appstream-unsupported-ctype/: metadata  org.flathub.appstream_unsupported_ctype.metainfo.xml  org.flathub.appstream_unsupported_ctype.xml
tests/builddir/baseapp/: metadata
tests/builddir/console/: metadata  org.flathub.example.console.desktop  org.flathub.example.console.metainfo.xml  org.flathub.example.console.xml
tests/builddir/dconf-access/: metadata
tests/builddir/desktop-file/: com.github.flathub_infra.desktop-file.desktop  com.github.flathub_infra.desktop-file.xml  metadata
tests/builddir/desktop-file-abs-exec/: metadata
tests/builddir/desktop-file-exec/: metadata
tests/builddir/desktop-file-no-exec/: metadata
tests/builddir/display-supported/: metadata
tests/builddir/eol_runtime/: metadata
tests/builddir/extension/: metadata
tests/builddir/finish_args/: metadata
tests/builddir/finish_args_conditional_input_skips_legacy_errors/: metadata
tests/builddir/finish_args_conditional_input_without_input_device/: metadata
tests/builddir/finish_args_conditional_usb_skips_legacy_errors/: metadata
tests/builddir/finish_args_conditional_usb_without_usb_device/: metadata
tests/builddir/finish_args_home_host/: metadata
tests/builddir/finish_args_invalid_conditional_permission/: metadata
tests/builddir/finish_args_missing/: metadata
tests/builddir/finish_args_new_metadata/: metadata
tests/builddir/finish_args_shm/: metadata
tests/builddir/finish_args_xdg_dirs/: metadata
tests/builddir/flathub_json/: metadata
tests/cli/: io.github.flathub.flathub.json  user_exceptions.json
tests/manifests/: appid-too-few-cpts.json  appid.json  base_app.json  com.example.json_warnings.json  dconf.json  display-only-wayland.json  display-supported1.json  display-supported2.json  display-supported3.json  eol_runtime.json  exceptions.json  exceptions_wildcard.json  finish-args-shm.json  finish_args-home_host3.json  finish_args-home_host4.json  finish_args-incorrect_secrets-talk-name.json  finish_args-new-metadata.json  finish_args-wayland-x11.json  finish_args.json  finish_args_conditional_input_skips_legacy_errors.json  finish_args_conditional_input_without_input_device.json  finish_args_conditional_usb_skips_legacy_errors.json  finish_args_conditional_usb_without_usb_device.json  finish_args_empty.json  finish_args_fs_negative.json  finish_args_invalid_conditional_permission.json  finish_args_missing.json  flathub.json  flathub_json.json  module-nightly-x-checker.json  modules.json  modules_git.json  modules_git_allowed.json  modules_git_disallowed.json  network_access.json  own_name_substring.json  own_name_substring2.json  toplevel.json  unknown-properties-1.json  unknown-properties-2.json  (+1 more)
utils/: check_wildcard_exceptions.py  create_exceptions.py  merge.py  sort.py  validator.py
(+148 files in other folders)
