[tool.poetry]
name = "flatpak_builder_lint"
version = "2.1.5"
description = "A linter for flatpak-builder manifests"
authors = ["Bartłomiej Piotrowski <b@bpiotrowski.pl>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
jsonschema = "^4.16.0"
requests = "^2.32.2"
lxml = "^5.2.2"
sentry-sdk = "^1.34.0"
PyGObject = "^3.46.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.981"
pylint = "^2.14.5"
pre-commit = "^2.20.0"
black = "^24.3.0"
Flake8-pyproject = "^1.1.0"
types-requests = "^2.28.11"
types-jsonschema = "^4.16.0"
types-lxml = "^2023.10.21"
PyGObject-stubs = "^2.10.0"

[tool.poetry.scripts]
flatpak-builder-lint = "flatpak_builder_lint.cli:main"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
ruff = "^0.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true
warn_return_any = true

[tool.flake8]
max-line-length = 100
