[tool.poetry]
name = "flatpak_builder_lint"
version = "2.1.5"
description = "A linter for flatpak-builder manifests"
authors = ["Bartłomiej Piotrowski <b@bpiotrowski.pl>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
jsonschema = "^4.19.1"
requests = "^2.32.2"
lxml = "^5.2.2"
sentry-sdk = "^2.8.0"
PyGObject = "^3.48.2"
requests-cache = "^1.2.1"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"
mypy = "^1.11.2"
ruff = "^0.6.7"
pre-commit = "^3.8.0"
types-requests = "^2.32.0.20240914"
types-jsonschema = "^4.23.0.20240813"
types-lxml = "^2024.9.16"
PyGObject-stubs = "^2.11.0"

[tool.poetry.scripts]
flatpak-builder-lint = "flatpak_builder_lint.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true
warn_return_any = true

[tool.ruff]
line-length = 100
include = ["*.py"]
target-version = "py310"

[tool.ruff.lint]
select = [
  "F",
  "E",
  "W",
  "B",
  "A",
  "C4",
  "DTZ",
  "SIM",
  "I",
  "ICN",
  "PIE",
  "T201",
  "Q",
  "RSE",
  "RET",
  "ARG",
  "ERA",
  "PL",
  "UP",
  "S",
]

ignore = [
  "PLR2004",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
  "S105",
  "S320",
  "S607",
  "S603",
]

[tool.ruff.format]
line-ending = "lf"
quote-style = "double"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
addopts = "--ignore=tests/repo --ignore=tests/test_httpserver.py"
testpaths = [
    "tests",
]
